# matlab-mat

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  mat_error.rs  parse.rs  writer.rs
