[package]
edition = "2021"
name = "matlab-mat"
version = "0.1.0"
authors=["chenjian <26922271@qq.com>"] 
description = "Matfile文件格式的读入和写入"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pjchen/matlab-mat.git"
keywords = ["matlab", "mat", "file", "reader", "writer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-primitive-derive = "0.2"
libflate = "1.0"
log = "0.4.0"
ndarr = {version = "0.15", package = "ndarray", optional = true}
nom = "7.1.1"
num-complex = {version = "0.4", optional = true}
num-traits = "0.2.15"
bytes = "1.1.0"
byteorder = "1.4.3"
chrono = "0.4"
hex = "0.4.3"

[features]
ndarray = ["ndarr", "num-complex"]
